<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".auth.LoginActivity">

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="24dp"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_new_account"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/transparent"
        android:textColor="@color/purple_500"
        tools:ignore="VisualLintButtonSize" />

</LinearLayout>